# BirchEngine

./: BirchEngine.sln  CMakeLists.txt  README.md  copy_files_to_binary_dir.cmake
BirchEngine/: BirchEngine.vcxproj  BirchEngine.vcxproj.filters
BirchEngine/Src/: AssetManager.cpp  AssetManager.h  CMakeLists.txt  Collision.cpp  Collision.h  Game.cpp  Game.h  Map.cpp  Map.h  TextureManager.cpp  TextureManager.h  Vector2D.cpp  Vector2D.h  main.cpp
BirchEngine/Src/ECS/: Animation.h  ColliderComponent.h  Components.h  ECS.cpp  ECS.h  KeyboardController.h  Projectile.h  ProjectileComponent.h  SpriteComponent.h  TileComponent.h  TransformComponent.h  UILabel.h
BirchEngine/assets/: collisionmap.txt  map.map  map1.map  mapcol.map.txt  p16x16.map  pyxel_16x16.txt  test.txt
